static/css/base.css
/* --------------------------- Full Site --------------------------- */

html {
    height: 100%;
}

body {
    overflow-x: hidden !important;
    color: #300030;
    font-family: 'Noto Serif', serif;
}

header {
    max-width: 100vw;
    margin: 0 !important;
    background-color: #fcf838;
}

#topnav {
    max-width: 100vw;
}

/* from Bulma - from code institute*/
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    font-family: 'Rock Salt', cursive;
    color: #700170;
}

.btn-main {
    color: #fcf838;
    background-color: #700170;
}

.btn-main:hover {
    color: #700170;
    background-color: #fcf838;
}

.btn-back {
    color: #700170;
    background-color: #fcf838;
    border-color: #700170;
}

.btn-back:hover {
    color: #fcf838;
    background-color: #700170;
}

/* --------------------------- Navbar --------------------------- */

.navbar-toggler {
    color: #700170;
}

.navbar-outer {
    justify-content: center;
}

.main-nav-container h4 {
    color: #700170;
}

.main-logo-link {
    width: fit-content;
}

.main-logo-link h2 {
    font-family: 'Rock Salt', cursive;
    color: #700170;
}



#free-delivery-banner {
    background-color: #300030;
    color: #fcf838;
}

.small-screen-header h2 {
    font-size: 20px;
    color: #700170;
}

.nav-link h4 {
    display: flex;
}

.nav-link h4:hover {
    color: #300030;
}

.dropdown-menu {
    background-color: #fcf838;
}

.dropdown-item {
    color: #700170;
}

/* --------------------------- footer --------------------------- */

footer {
    background-color: #fcf838;
}

.social-media-icons i {
    color: #700170;
}

.social-media-icons i:hover {
    color: #300030;
}

.copy-right {
    color: #700170;
}
/* --------------------------- Dont know --------------------------- */

.image-container img {
    object-fit: contain;
    width: 60vw;
    height: 60vh;
}

.update-link,
.remove-item {
    cursor: pointer;
}

.message-container {
    position: fixed;
    top: 45px;
    right: 50px;
    z-index: 99999999999;
}

.cart-notification-wrapper {
    height: 100px;
    overflow: hidden;
    overflow-y: auto;
}



/* --------------------------- Product Page ----------------------- */

.searchbar {
    border: solid 1px;
}

input[name='q']:focus,
input[name='q']:active {
    color: #300030 !important;
    box-shadow: none !important;
    border: none !important;
}

input[name='q']::placeholder {
    color: #aab7c4;
}

.product-image image {
    padding-top: 10px;
}

.product-image:hover {
    box-shadow: 0 4px 8px 0 rgba(112, 1, 112, 0.5), 0 6px 20px 0 rgba(112, 1, 112, 0.5);
}

.product-link {
    color: #700170;
}

.product-link:hover {
    color: #700170;
    text-shadow: 1px 1px 2px #fcf838;
}

.review-section {
    background-color: rgb(163, 161, 58, 0.4);
}

.review-input {
    width: 35vw;
    height: 30vh;
}

.wishlist-table {
    color: #300030;
}

/* --------------------------- Cart --------------------------- */

.cart-container {
    min-height: 55vh;
}

/* --------------------------- Checkout --------------------------- */

select,
select option {
    color: #000;
}

select:invalid,
select option[value=""] {
    color: #aab7c4 !important;
}

/* Allauth form formatting from Boutique Ado*/

.login-signup {
    background-color: rgb(163, 161, 58, 0.4);
    border-radius: .25rem;
}

.form-control:focus,
.form-control:active {
    color: #300030;
    background-color: #fff;
    border-color: #700170;
    outline: 0;
    box-shadow: 0 0 0 0.2rem rgb(212 1 212 / 25%);
}

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #300030; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #700170;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fcf838;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #700170;
    border: 1px solid transparent;
    border-radius: .25rem;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #700170;
    background-color: #fcf838;
    border-color: #fcf838;
}

.allauth-form-inner-content a {
	text-decoration: none;
    /* color: #700170; */
}

/* Product Form */
.btn-file {
    position: relative;
    overflow: hidden;
}

.form-control {
    border: 1px solid #700170;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-radius: 0;
    border-color: #dc3545;
}

.wishlist-btn {
    min-width: 115px;
}

.logout-container {
    height: 55vh;
}

/* --------------------------- Checkout ----------------------------- */

#payment-form .form-control, #card-element {
    border: 1px solid #700170 !important;
    border-radius: .25rem;
}

/* --------------------------- Toasts ----------------------------- */

.success-header {
    background-color: #82f56b;
    color: #000;
}

.warning-header {
    background-color: #ffd34e;
    color: #000;
}

.info-header {
    background-color: #53e8ff;
    color: #000;
}

.error-header {
    background-color: #ff4759;
    color: #fff;
}

/* --------------------------- Media Queries ---------------------- */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 164px;
    }
    
    .navbar-expand-lg {
        -ms-flex-flow: row nowrap;
        flex-flow: row nowrap;
        -ms-flex-pack: start;
        justify-content: center;
    }
}

/* @media (max-width: 992px) {
    body {
        margin-top: 120px;
    }
} */


@media (max-width: 768px) {
    .image-container img {
        object-fit: contain;
        width: 90vw;
        height: 90vh;
    }

    .navbar {
        display: initial;
    }

    .social-media-icons i {
        font-size: 3rem;
    }
}

@media (max-width: 425px) {
    .mobile-logo {
        font-size: 15px;
        word-spacing: 300px;
        text-align: center;
    }

    .cart-logo {
        word-spacing: 300px;
        text-align: center;
    }

    .cart-table {
        font-size: small;
    }

    .cart-qty {
       display: block;
    }

    .qty_input {
            min-width: 30px !important;
            padding-left: 6px;
            padding-right: 0px;
     }

    .decrement-qty {
        ml-2
    }

    .cart-remove {
        float: none !important;
    }

    .review-section {
        max-width: 100vw;
        margin-left: 0;
    }

    .review-input {
        width: 90vw;
    }

    .wishlist-btn {
        font-size: 10px;
        min-width: 0px;
    }

    .wishlist-table {
        font-size: 10px;
    }
}

@media (max-width: 320px) {
.btn-back {
    font-size: 93%;
    margin-bottom: 5px;
    }
}

